# systemdtab

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_ja.md
.claude/commands/: sdtab.md
.github/workflows/: ci.yml  release.yml
skill/: sdtab.md
src/: add.rs  apply.rs  completions.rs  config.rs  cron.rs  disable.rs  doctor.rs  edit.rs  enable.rs  export.rs  init.rs  list.rs  logs.rs  main.rs  parse_unit.rs  remove.rs  restart.rs  run.rs  sdtabfile.rs  status.rs  systemctl.rs  unit.rs  upgrade.rs
src/completions/: bash.sh  fish.sh  zsh.sh
