[package]
name = "systemdtab"
version = "0.1.0"
edition = "2021"
description = "Manage systemd timers and services like crontab"
license = "MIT"
repository = "https://github.com/kok1eee/systemdtab"
keywords = ["systemd", "timer", "crontab", "service"]
categories = ["command-line-utilities"]

[[bin]]
name = "sdtab"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
